--- a/gradle.properties
+++ b/gradle.properties
@@ -5,12 +5,12 @@ mod_id=angelblockrenewed
 mod_name=Angel Block Renewed
 main_name=AngelBlockRenewed
 curseforge_name=angel-block-renewed
-mod_version=1.0
+mod_version=1.1
 mod_description=A block you can place midair or in fluids to help build in the sky or in water
 
 minecraft_version=1.19.3
 mappings_channel=parchment
-mappings_version=1.19.2-2022.11.27-1.19.3
-forge_version=net.minecraftforge:forge:1.19.3-44.0.0
+mappings_version=2023.02.05-1.19.3
+forge_version=net.minecraftforge:forge:1.19.3-44.1.0
 forge_version_min=44
 minecraft_version_next=1.20
