--- a/gradle.properties
+++ b/gradle.properties
@@ -8,9 +8,9 @@ curseforge_name=angel-block-renewed
 mod_version=1.1
 mod_description=A block you can place midair or in fluids to help build in the sky or in water
 
-minecraft_version=1.19.3
+minecraft_version=1.19.4
 mappings_channel=parchment
-mappings_version=2023.02.05-1.19.3
-forge_version=net.minecraftforge:forge:1.19.3-44.1.0
-forge_version_min=44
+mappings_version=1.19.3-2023.03.12-1.19.4
+forge_version=net.minecraftforge:forge:1.19.4-45.0.52
+forge_version_min=45
 minecraft_version_next=1.20
