--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,14 @@
 org.gradle.jvmargs=-Xmx3G
-org.gradle.daemon=false
 
 mod_id=angelblockrenewed
 mod_name=Angel Block Renewed
 main_name=AngelBlockRenewed
 curseforge_name=angel-block-renewed
-mod_version=1.3
+mod_version=1.2
 mod_description=A block you can place midair or in fluids to help build in the sky or in water
 
-minecraft_version=1.18.2
-mappings_channel=parchment
-mappings_version=2022.08.07-1.18.2
-forge_version=net.minecraftforge:forge:1.18.2-40.1.0
-forge_version_min=40
-minecraft_version_next=1.19
+# check these on https://fabricmc.net/develop
+minecraft_version=1.20
+yarn_mappings=1.20+build.1
+loader_version=0.14.21
+fabric_version=0.83.0+1.20
